# pyiges

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  genindex.html  geometry.html  index.html  objects.inv  py-modindex.html  pyiges.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: testing-and-deployment.yml
_sources/: geometry.rst.txt
docs/: Makefile  conf.py  geometry.rst  index.rst  pyiges.rst
pyiges/: __init__.py  _version.py  check_imports.py  constants.py  curves_surfaces.py  entity.py  faces.py  geometry.py  iges.py  reader.py
pyiges/examples/: __init__.py  impeller.igs
src/pyiges/: __init__.py  check_imports.py  constants.py  entity.py  geometry.py  iges.py  reader.py
src/pyiges/examples/: __init__.py  sample.igs
tests/: conftest.py  test_pyiges.py
tests/reference_data/: example-arcs.iges
