[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = 'black'
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true
skip_glob = 'pyvista/**/__init__.py,pyvista/__init__.py'

[tool.blackdoc]
# From https://numpydoc.readthedocs.io/en/latest/format.html
# Extended discussion: https://github.com/pyvista/pyvista/pull/4129
# The length of docstring lines should be kept to 75 characters to facilitate
# reading the docstrings in text terminals.
line-length = 75

[tool.pytest.ini_options]
junit_family='legacy'
filterwarnings = [
    'ignore::FutureWarning',
    'ignore::PendingDeprecationWarning',
    'ignore::DeprecationWarning',
    # bogus numpy ABI warning (see numpy/#432)
    'ignore:.*numpy.dtype size changed.*:RuntimeWarning',
    'ignore:.*numpy.ufunc size changed.*:RuntimeWarning',
    'ignore:.*Given trait value dtype "float64":UserWarning',
    'ignore:.*The NumPy module was reloaded*:UserWarning',
    'error::pyvista.PyVistaDeprecationWarning'
]
doctest_optionflags = 'NUMBER ELLIPSIS'
testpaths = 'tests'
