[build-system]
requires = ["flit_core>=3.8.0"]
build-backend = "flit_core.buildapi"

[project]
name = "pyiges"
authors = [
    {name = "PyVista Developers", email = "info@pyvista.org"},
]
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "Pythonic IGES reader"
keywords = ["iges", "cad", "nurbs", "bspline"]
dependencies = [
    "tqdm",
    "numpy",
]
version = "0.4.dev0"

[project.urls]
Homepage = "https://github.com/pyvista/pyiges"
Documentation = "https://github.com/pyvista/pyiges"
Repository = "https://github.com/pyvista/pyiges.git"

[project.optional-dependencies]
full = [
    "geomdl",
    "pyvista>=0.28.0",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.flit.sdist]
include = [
    "pyiges/examples/impeller.igs",
    "pyiges/examples/sample.igs",
]

[tool.blackdoc]
# From https://numpydoc.readthedocs.io/en/latest/format.html
# Extended discussion: https://github.com/pyvista/pyvista/pull/4129
# The length of docstring lines should be kept to 75 characters to facilitate
# reading the docstrings in text terminals.
line-length = 75

[tool.pytest.ini_options]
junit_family='legacy'
filterwarnings = [
    'ignore::FutureWarning',
    'ignore::PendingDeprecationWarning',
    'ignore::DeprecationWarning',
]
doctest_optionflags = 'NUMBER ELLIPSIS'
testpaths = 'tests'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
