[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core>=3.8.0"]

[project]
authors = [
  {name = "PyVista Developers", email = "info@pyvista.org"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "tqdm",
  "numpy"
]
description = "Pythonic IGES reader"
keywords = ["iges", "cad", "nurbs", "bspline"]
license = {text = "MIT"}
name = "pyiges"
readme = "README.rst"
requires-python = ">=3.9"
version = "0.3.2"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-notfound-page",
  "sphinx-copybutton"
]
full = [
  "geomdl",
  "pyvista>=0.28.0"
]
test = [
  "pytest",
  "pytest-cov"
]

[project.urls]
Documentation = "https://github.com/pyvista/pyiges"
Homepage = "https://github.com/pyvista/pyiges"
Repository = "https://github.com/pyvista/pyiges.git"

[tool.blackdoc]
# From https://numpydoc.readthedocs.io/en/latest/format.html
# Extended discussion: https://github.com/pyvista/pyvista/pull/4129
# The length of docstring lines should be kept to 75 characters to facilitate
# reading the docstrings in text terminals.
line-length = 75

[tool.flit.sdist]
include = [
  "pyiges/examples/impeller.igs",
  "pyiges/examples/sample.igs"
]

[tool.pytest.ini_options]
doctest_optionflags = 'NUMBER ELLIPSIS'
filterwarnings = [
  'ignore::FutureWarning',
  'ignore::PendingDeprecationWarning',
  'ignore::DeprecationWarning'
]
junit_family = 'legacy'
testpaths = 'tests'

[tool.ruff]
ignore = ["E722"]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
